# Multi-Agent-Simulator

./: Dockerfile  LICENSE  README.md  dlgROSNavigation_ui.py  dlgROSSlam.ui  init.sh  main.ui  rc_resources.py  resources.qrc  resources_rc.py  ui_dlgROSSlam.py  ui_widgetRobotItem.py  xslocobot_amd64_install4.sh
I2I_Simulator/: LICENSE  README.md  infer.py  inference.py  models.py  requirements.txt
I2I_Simulator/src/: __init__.py  attention_processor.py  mask_attention_processor.py  mask_ip_controller.py
ROSSimulator/: constant.py  dlgROSNavigation.py  dlgROSNavigation.ui  dlgROSRViz.ui  dlgROSTeleop.py  dlgROSTeleop.ui  main.py  main_ui.py  simulator.py  ui_dlgROSTeleop.py  ui_main.py  widgetRobotItem.py  widgetRobotItem.ui
ROSSimulator/launch/: 20231005_180513.launch  shelltemp.sh
code/Multi-Agent-Simulator/: constant.py  dlgDB.py  dlgDB.ui  dlgDBOpen.py  dlgDBOpen.ui  dlgDBOpen_ui.py  dlgDB_ui.py  dlgROSI2I.py  dlgROSI2I.ui  dlgROSI2I_ui.py  dlgROSNavigation.py  dlgROSNavigation.ui  dlgROSNavigation_ui.py  dlgROSRViz.py  dlgROSRViz_ui.py  dlgROSSlam.py  dlgROSSlam_ui.py  dlgROSTeleop.py  dlgStartROSCollaborationTask.py  main.py  (+33 more)
models/: README
particle_emitter/: particle_emitter.py  particle_emitter_noise.py  particle_template_blue.sdf  particle_template_grey.sdf  particle_template_orange.sdf  spawn_particles.py
robots/ketg_ai-bot_platform/uni_gazebo/: CMakeLists.txt
robots/ketg_ai-bot_platform/uni_navigation/: CMakeLists.txt  package.xml
robots/ketg_ai-bot_platform/uni_navigation/config/: costmap_global.yaml
robots/ketg_ai-bot_platform/uni_navigation/launch/: move_base.launch
robots/ketg_ai-bot_platform/uni_navigation/maps/: hd_world.yaml
robots/ketg_ai-bot_platform/uni_navigation/rviz/: base_navigation.rviz
ros1-gazebo-simulation-model/: CMakeLists.txt  package.xml
ros1-gazebo-simulation-model/config/: ros_controllers.yaml
ros1-gazebo-simulation-model/launch/: hd_world.launch  keyboard_teleop.launch
ros1-gazebo-simulation-model/meshes/stl/: caster_back_left.stl  caster_back_right.stl  caster_fromt_right.stl  caster_front_left.stl  mw_ahrs_v1_imu.stl  ocam_1.stl  ocam_2.stl  ocam_3.stl  ocam_4.stl  ocam_5.stl  ocam_6.stl  tim571.stl  wheel_l.stl  wheel_r.stl
ros1-gazebo-simulation-model/scripts/: keyboard_teleop.py
ros1-gazebo-simulation-model/uni_description/meshes/: TiM571.stl  astra2_1.stl  astra2_3.stl  astra_embedded_s.stl  gazebo_astra.stl  wheel_L.stl
ros1-gazebo-simulation-model/uni_description/urdf/: uni_base.urdf.xacro
ros1-gazebo-simulation-model/uni_gazebo/: package.xml
ros1-gazebo-simulation-model/uni_gazebo/launch/: hd_world.launch
ros1-gazebo-simulation-model/uni_gazebo/worlds/: hd_world.world
ros1-gazebo-simulation-model/uni_navigation/config/: costmap_common.yaml  costmap_local.yaml  planner.yaml  planner_teb.yaml
ros1-gazebo-simulation-model/uni_navigation/launch/: amcl.launch  amcl_demo.launch  uni_navigation_demo.launch
ros1-gazebo-simulation-model/uni_navigation/maps/: hd_world.pgm
ros1-gazebo-simulation-model/uni_slam/slam_tools/: CMakeLists.txt
ros1-gazebo-simulation-model/uni_slam/slam_tools/config/: amcl_param.yaml
ros1-gazebo-simulation-model/uni_slam/slam_tools/launch/: gmapping.launch
ros1-gazebo-simulation-model/urdf/: aibot_ketg_gazebo.xacro
task_manager/: area_split.py  full_coverage_path_planning.py  main.py  map.pgm  utils.py
worlds/: README  b_with_realistic_drinks.world  bookstore.world  cafe.world  tesla_world_ketg  tesla_world_ketg_2
(+113 files in other folders)
